apps/node-red/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: node-red.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: node-red
              port:
                name: "http"
